fixed issue with my middle box getting squashed

--- a/index.css
+++ b/index.css
@@ -133,7 +133,7 @@ article p{
   color: hsl(228, 45%, 44%); 
 }
 
-@media (min-width:620px){
+@media (min-width:519.99px){
   h1,
   h2{
     font-size: 3vw;
@@ -145,17 +145,17 @@ article p{
   }
 
   .main-section{
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 1.5em;
+    align-items: center;
   }
 
   .box{
     min-width: 150px;
     max-width: 280px;
     width: 100%;
-    height: 200px;
+    height: 180px;
 
     padding-top: 25px;
   }
